--- a/style.css
+++ b/style.css
@@ -13,8 +13,11 @@
 button{
     cursor: pointer;
 }
+.none{
+    display: none;
+}
 
-/* ここから */
+/* modalのCSS */
 .modalWrapper {
     position: fixed;
     display: flex;
@@ -23,9 +26,10 @@ button{
     top: 0;
     left: 0;
     width: 100vw;
-    height: 110vh;
+    height: 100vh;
     background-color: rgba(0,0,0,0.5);
     z-index: 1;
+    /* つっかえ棒を機能させるためのCSS */
     overscroll-behavior: contain;
     overflow-y: scroll;
 }
@@ -38,13 +42,17 @@ button{
     border-radius: 15px;
 }
 .modal header {
+    padding: 8px 16px;
     background-color: rgba(22, 104, 255, 0.8);
+    border-radius: 15px 15px 0 0;
 }
+.modal p {
+    padding: 0px 16px ;
+}
+
+/* つっかえ棒 */
 .nonScroll{
-    height:calc(100% + 2px) ;
+    height:calc(100vh + 1px) ;
     width: 1px;
-    background-color: #212121;
-}
-.none{
-    display: none;
+    background-color: transparent;
 }
